bases/datawarehouse/byteair/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: airbyte.${cluster_name}.${cluster_location}.bink.sh
  namespace: airbyte
spec:
  ingressClassName: traefik
  rules:
    - host: airbyte.${cluster_name}.${cluster_location}.bink.sh
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: airbyte-airbyte-webapp-svc
                port:
                  number: 80
  tls:
    - hosts:
        - airbyte.${cluster_name}.${cluster_location}.bink.sh
